using System;
using System.Collections.Generic;
using System.Text;

namespace Druk
{
    public interface IObserver
    {
        public void Update();
    }
}
